# C2Lab2

./: .gitignore  CMakeLists.txt  Point.cpp  Point.h  Vector2D.cpp  Vector2D.h  animal.h  main.cpp  safari.cpp  safari.h  simple_simulation.h  simulation.cpp  simulation.h
